<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:layout_weight="1"
       >
       <TextView
           android:id="@+id/tvShopName"
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="耐克旗舰店"
           android:drawableLeft="@drawable/icon_order_home"
           android:drawableRight="@drawable/arrow_right"
           android:gravity="center"
           />
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="match_parent"
           android:text="交易成功"
           android:layout_alignParentRight="true"
           android:gravity="center"
           />
   </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_weight="3"
        >
        <ImageView
            android:id="@+id/orderImgView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@mipmap/ic_launcher"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/itemProductDesc"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="打折后的说明"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="打折前的说明"
                />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/itemLaterPrice"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="打折后的价格"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="打折前的价格"
                android:gravity="center"
                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnMore"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnMore"
            android:layout_margin="@dimen/dp_4"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btnFridendsPay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnFridendsPay"
            android:layout_margin="@dimen/dp_4"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_4"
            android:text="@string/btnCancel"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/btnApprase"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btnApprase"
            android:layout_margin="@dimen/dp_4"
            android:layout_weight="1"
            />
    </LinearLayout>

</LinearLayout>
